# PVHSS-RH

./: .gitignore  CAPSNARK.cpp  CAPSNARK.h  CMakeLists.txt  Readme.md  VHSSElg.h  bench.conf  helper.cpp  helper.h  main.cpp  nohup.out  pvhss_rh_refactor_task_plan.md  run_micro.sh  run_pir.sh  run_rlwe_benchmarks.sh  run_schemes.sh  runall.sh  timetester.cpp
CZ23/: CMakeLists.txt  PVHSS.h  function.h  main.cpp  tool.h
GroupHSS/: CMakeLists.txt
GroupHSS/include/: HSSElg.h  tester.h
GroupHSS/src/: HSSElg.cpp  tester.cpp
GroupHSS/test/: main.cpp
GroupPi1/: CMakeLists.txt
GroupPi1/include/: GroupPi1.h  tester.h
GroupPi1/src/: GroupPi1.cpp  Ped.cpp  tester.cpp
GroupPi1/test/: main.cpp
GroupPi2/: CMakeLists.txt
GroupPi2/include/: BGN.h  GroupPi2.h  relic_cp_bgn.h  tester.h
GroupPi2/src/: BGN.cpp  GroupPi2.cpp  Ped.cpp  relic_cp_bgn.cpp  tester.cpp
GroupPi2/test/: main.cpp
PiCZ/: CMakeLists.txt  GenData.h  PKE.h  function.h  main.cpp
PiDCGroup/: CMakeLists.txt
PiDCGroup/include/: PiDCGroup.h
PiDCGroup/src/: DecPed.cpp  PiDCGroup.cpp  tester.cpp
PiDCGroup/test/: main.cpp
PiDCRLWE/: CMakeLists.txt
PiDCRLWE/include/: DecPed.h  PiDCRLWE.h  tester.h
PiDCRLWE/src/: PiDCRLWE.cpp  VHSSRLWE.cpp  tester.cpp
PiHSSGroup/: CMakeLists.txt
PiHSSGroup/src/: HSSElg.cpp
PiHSSRLWE/: CMakeLists.txt
PiHSSRLWE/include/: HSSRLWE.h
PiHSSRLWE/src/: HSSRLWE.cpp
PiOTGroup/: CMakeLists.txt
PiOTGroup/include/: Ped.h  PiOTGroup.h  tester.h
PiOTGroup/src/: PiOTGroup.cpp  tester.cpp
PiOTGroup/test/: main.cpp
PiOTRHGroup/: CMakeLists.txt
PiOTRHGroup/include/: tester.h
PiOTRHGroup/src/: PiOTRHGroup.cpp
PiOTRHRLWE/: CMakeLists.txt
PiOTRHRLWE/include/: tester.h
PiOTRHRLWE/src/: PiOTRHRLWE.cpp
PiOTRLWE/: CMakeLists.txt
PiOTRLWE/include/: PiOTRLWE.h  tester.h
PiOTRLWE/src/: PiOTRLWE.cpp  tester.cpp
PiOTRLWE/test/: main.cpp
PiRERHGroup/: CMakeLists.txt
PiRERHGroup/include/: DecPed.h  tester.h
PiRERHGroup/src/: DecPed.cpp  PiRERHGroup.cpp
PiRERHRLWE/: CMakeLists.txt
PiRERHRLWE/include/: tester.h
PiRERHRLWE/src/: PiRERHRLWE.cpp  tester.cpp
PiVHSSGroup/: CMakeLists.txt
PiVHSSGroup/src/: tester.cpp
PiVHSSGroup/test/: main.cpp
PiVHSSRLWE/: CMakeLists.txt
PiVHSSRLWE/include/: VHSSRLWE.h
PiVHSSRLWE/src/: VHSSRLWE.cpp  tester.cpp
PiVHSSRLWE/test/: main.cpp
RLWEHSS/: CMakeLists.txt
RLWEHSS/include/: HSSRLWE.h  tester.h
RLWEHSS/src/: HSSRLWE.cpp  tester.cpp
RLWEHSS/test/: main.cpp
RLWEPi1/: CMakeLists.txt
RLWEPi1/include/: Ped.h  RLWEPi1.h  VHSSRLWE.h  tester.h
RLWEPi1/src/: Ped.cpp  RLWEPi1.cpp  tester.cpp
RLWEPi2/: CMakeLists.txt
RLWEPi2/include/: BGN.h  RLWEPi2.h  tester.h
RLWEPi2/src/: RLWEPi2.cpp  VHSSRLWE.cpp
backends/cz/: CMakeLists.txt
backends/cz/include/: cz_backend.h
backends/group_hss/: CMakeLists.txt
backends/group_hss/include/: group_hss_backend.h
backends/group_vhss/: CMakeLists.txt
backends/group_vhss/include/: group_vhss_backend.h
backends/rlwe_hss/: CMakeLists.txt
backends/rlwe_hss/include/: rlwe_hss_backend.h
backends/rlwe_vhss/: CMakeLists.txt
backends/rlwe_vhss/include/: rlwe_vhss_backend.h
benchmarks/: CMakeLists.txt  README.md  run_rlwe_all.sh
benchmarks/common/: protocol_bench_runner.h  scheme_bench_runner.h
benchmarks/lhss_compare/: CMakeLists.txt  hss_lhss_bench.cpp
benchmarks/micro/: CMakeLists.txt  README.md  microbench.cpp  microbench_vhss_rlwe.cpp  run_microbenchmarks.py  run_microbenchmarks.sh
benchmarks/overhead/: CMakeLists.txt  README.md  generate_incremental_overhead.py  generate_incremental_overhead.sh  incremental_timing.cpp
benchmarks/pir/: CMakeLists.txt  README.md  cdpir.cpp  pir_group_dc.cpp  pir_group_ot.cpp
benchmarks/protocols/: CMakeLists.txt  README.md  protocol_bench_cz.cpp  protocol_bench_cz_new.cpp  protocol_bench_dc.cpp  protocol_bench_hss.cpp  protocol_bench_main.cpp  protocol_bench_ot.cpp  protocol_bench_rlwe_dc.cpp  protocol_bench_rlwe_hss.cpp  protocol_bench_rlwe_ot.cpp  protocol_bench_rlwe_vhss.cpp  protocol_bench_tcc25.cpp  protocol_bench_vhss.cpp  protocol_benchmark_runner.cpp  run_protocol_benchmarks.py  run_protocol_benchmarks.sh  setup_incremental_benchmark.cpp
benchmarks/schemes/: CMakeLists.txt  README.md  run_scheme_benchmarks.sh  scheme_bench_cz.cpp  scheme_bench_dc.cpp  scheme_bench_hss.cpp  scheme_bench_rlwe_dc.cpp  scheme_bench_vhss.cpp  scheme_group_dc.cpp  scheme_group_hss.cpp  scheme_group_ot.cpp  scheme_group_tcc25.cpp  scheme_group_vhss.cpp  scheme_rlwe_cz.cpp  scheme_rlwe_dc.cpp  scheme_rlwe_hss.cpp  scheme_rlwe_ot.cpp  scheme_rlwe_vhss.cpp
cmake/: FindGMP.cmake  FindNTL.cmake  FindRLC.cmake  get_gmp_version.c
common/: CMakeLists.txt
common/include/: VHSSElg.h  elgamal.h  helper.h  relic_cp_bgn.h  relic_cp_decped.h
common/src/: VHSSElg.cpp  elgamal.cpp  helper.cpp  relic_cp_bgn.cpp  relic_cp_decped.cpp
include/: PVHSS.h  timetester.h
programs/: CMakeLists.txt
programs/include/: mpe_program.h  pd2_program.h  plaintext_mpe.h  plaintext_pd2.h  rms_evaluator.h  rms_program.h
programs/src/: mpe_program.cpp  pd2_program.cpp  plaintext_mpe.cpp  plaintext_pd2.cpp  rms_program.cpp
schemes/cz/: CMakeLists.txt  GenData.h  PKE.h  PVHSS.h  function.h  main.cpp  protocol_cz.h  scheme_cz.h  tool.h
schemes/group/dc/: CMakeLists.txt
schemes/group/hss/: CMakeLists.txt
schemes/group/tcc25/: CMakeLists.txt
schemes/group/tcc25/include/: Tcc25Group.h  tester.h
schemes/group/tcc25/src/: Tcc25Group.cpp  tester.cpp
schemes/rlwe/hss/: CMakeLists.txt
schemes/rlwe/hss/include/: HSSRLWE.h  tester.h
schemes/rlwe/hss/lhss/lattice/: crt.hpp  params.hpp  poly.hpp  util.hpp  z.hpp
schemes/rlwe/hss/lhss/lhss/: lhss.hpp  rlwe_ops.hpp  rlwe_ops_sym.hpp  sampler.hpp
schemes/rlwe/hss/src/: HSSRLWE.cpp  tester.cpp
schemes/rlwe/hss/test/: main.cpp
src/: PVHSS.cpp  relic_cp_bgn.cpp
test/: main.cpp
tests/correctness/: CMakeLists.txt  README.md  p5_dc_group_acc.cpp  p5_dc_rlwe_acc.cpp  p5_ot_acc.cpp  p5_ot_group_acc.cpp  p5_ot_rlwe_acc.cpp  p5_tcc25_group_acc.cpp  p5_vhss_rlwe_acc.cpp  test_programs.cpp
(+98 files in other folders)
